--- a/progettoP/Tesi.tex
+++ b/progettoP/Tesi.tex
@@ -7,6 +7,13 @@
 \usepackage {listings}
 \usepackage{amsmath}
 \usepackage{hyperref}
+\usepackage{xcolor}
+\hypersetup{
+    colorlinks,
+    linkcolor={red!50!black},
+    citecolor={blue!50!black},
+    urlcolor={blue!80!black}
+}
 \usepackage[all]{hypcap}
 \usepackage{longtable}
 \usepackage{array}
@@ -3006,7 +3013,6 @@ Come più volte ripetuto è stato posto un tempo limite pari a $30$ minuti il qu
 \captionof{table}{Tabella risultati instanze con numero di nodi compreso tra \textbf{$200$} e \textbf{$299$} $+$ algoritmi esatti}
 }
 \vspace*{\fill}
-\clearpage
 
 \begin{figure}[htbp]
     \centering
